2010-02-17  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_optimal_intersecting_plane.m:

	- Interface change: Change argument order.

	- Now instead of computing a rotation centroid at 2/3 of the
	volume, the user enters the rotation centroid.

	- The rotation centroid stays fixed and is not recomputed at each
	iteration of the optimisation algorithm (actually it is, for
	tracking purposes, but the value used is the initial).

	- Remove big block to compute the instersection area at iteration
	zero, as this can be now done within the optimisation loop.

	- Optimise the azimuth and elevation angles of the normal vector,
	instead of the 3 coordinates of the vector.

	- Use new vec2rotmat() function to compute rotation matrix from
	the normal vector.

	* Add PointsToolbox/vec2rotmat.m:

	- VEC2ROTMAT Compute rotation matrix from Cartesian vector.

	* Add PointsToolbox/plotaxes.m:

	- PLOTAXES Plot axes of 3D coordinate system.

2010-02-15  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scirunnrrd_optimal_intersecting_plane.m:

	- Undo change of vector arguments to matrices, because we can do
	the optimisation on the sole vector, and then recompute the
	rotation matrix.

	But keep renaming of function being used by this function.

	* FiltersToolbox/scinrrd_intersect_plane.m:

	- Force NRRD data to be double, otherwise interpolation for the
	intersection doesn't work.

	* PointsToolbox/scinrrd_pca.m:

	- Remove assumption that NRRD will have dummy dimension, because
	it could have been removed by a previous scinrrd function.

	* FiltersToolbox/scinrrd_vertical_rot3.m:

	- Replace code block by scinrrd_vertical_rot3().

	- Add input argument so that you can select whether the rotation
	is forwards or backwards.

	* PointsToolbox/scinrrd_pca.m:

	- Compute centroid as output argument.

	* Rename scirunnrrd_world2index.m as
	scinrrd_world2index.m. Correct variables and help header for